<!--
  ~    Copyright 2019 Horácio Flávio Comé Júnior
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>

    <string name="app_name" translatable="false">Reaque</string>

    <string name="default_notification_channel_id" translatable="false">reaque-firebase-messaging-channel_id</string>

    <!-- 01 URL -->
    <string name="url_terms_and_conditions" translatable="false">https://github.com/horaciocome1/reaque-android-app/tree/master/docs/TERMS_AND_CONDITIONS.md</string>
    <string name="url_privacy_policy" translatable="false">https://github.com/horaciocome1/reaque-android-app/tree/master/docs/PRIVACY_POLICY.md</string>
    <string name="url_licence" translatable="false">https://github.com/horaciocome1/reaque-android-app/tree/master/docs/LICENSE</string>
    <string name="url_about" translatable="false">https://reaque.firebaseapp.com</string>
    <string name="url_background_sign_in" translatable="false">https://firebasestorage.googleapis.com/v0/b/reaque.appspot.com/o/resources%2Fimages%2F19228.jpg?alt=media&amp;token=2f9d40b5-f2bf-47cb-8534-782c40487923</string>
    <string name="url_update" translatable="false">https://reaque.firebaseapp.com/#download</string>
    <string name="email_developer" translatable="false">hcome@pm.me</string>
    <!-- 01 URL end -->

    <string name="email_app_not_found" translatable="false">Email app not found</string>

    <string name="content_description_post_cover_image" translatable="false">Post cover image</string>
    <string name="content_description_user_profile_image" translatable="false">User profile image</string>
    <string name="content_description_topic_cover_image" translatable="false">Topic cover image</string>
    <string name="content_description_posts_icon" translatable="false">Posts icon</string>
    <string name="content_description_users_icon" translatable="false">Users icon</string>
    <string name="content_description_since_icon" translatable="false">Since icon</string>
    <string name="content_description_address_icon" translatable="false">Address icon</string>

    <string name="more">More</string>
    <string name="posts">Posts</string>
    <string name="sign_out">Log out</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="licenses">Licenses</string>
    <string name="gallery">Gallery</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="whats_new">Whats new?</string>
    <string name="address">Address [Town, State]</string>
    <string name="bio">Bio</string>
    <string name="welcome">Welcome</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="explore">Explore</string>
    <string name="suggestions">Suggestions</string>
    <string name="create_post">Create post</string>
    <string name="subscribers">Subscribers</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="post">Post</string>
    <string name="subscribe">Subscribe</string>
    <string name="bullet">•</string>
    <string name="done">Done</string>
    <string name="rating_5">5 stars</string>
    <string name="rating_4">4 stars</string>
    <string name="rating_3">3 stars</string>
    <string name="rating_2">2 stars</string>
    <string name="rating_1">1 star</string>
    <string name="set_rating">Set rating</string>
    <string name="read_post">Reading</string>
    <string name="feed">Feed</string>
    <string name="sign_in">Sign in</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="users">Users</string>
    <string name="topic_of_interest">Topic of interest</string>
    <string name="user_profile">Profile</string>
    <string name="update">Update</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_needed_explanation">We need to access your storage so you can select a picture. You may have to accept the permission dialog.</string>
    <string name="permission_denied">Permission DENIED</string>
    <string name="confirm">I do understand!</string>
    <string name="reject">Don\'t want to</string>
    <string name="please_wait_update">Please wait while updates are uploaded . . .</string>
    <string name="please_wait_create">Please wait while your post is created . . .</string>
    <string name="update_available">Update available</string>
    <string name="my_rating">My rating</string>
    <string name="some_error_occurred_while_logging_you_in_please_try_again">Some not expected error occurred while logging you in :(. Please try again!</string>
    <string name="navigation_drawer_header_image" translatable="false">Navigation drawer header image</string>
    <string name="set_rating_illustration_image" translatable="false">Set rating illustration image</string>

</resources>
