<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/privacy_policy_textview"
            style="@style/AppTheme.CompleteClickableEffect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet" />

        <TextView
            android:id="@+id/terms_and_conditions_textview"
            style="@style/AppTheme.CompleteClickableEffect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/terms_and_conditions"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>