<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2019 Horácio Flávio Comé Júnior
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/secondaryDarkColor" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_progressbar_size"
                android:layout_gravity="center"
                android:layout_margin="32dp" />

            <TextView
                android:id="@+id/error_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:text="@string/some_error_occurred_while_logging_you_in_please_try_again"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/colorError"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:resourceId="@{R.drawable.ic_undraw_reading_0re1}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:padding="16dp"
                android:text="@string/sign_in"
                app:cornerRadius="@dimen/default_corner_radius"
                app:icon="@drawable/googleg_standard_color_18" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <import type="io.github.horaciocome1.reaque.R" />

    </data>

</layout>