<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/licenses_textview"
            style="@style/AppTheme.CompleteClickableEffect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="32dp"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/licenses"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/feedback_textview"
            style="@style/AppTheme.CompleteClickableEffect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/feedback"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/licenses_textview" />

        <TextView
            android:id="@+id/about_textview"
            style="@style/AppTheme.CompleteClickableEffect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="32dp"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="16dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedback_textview" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/feedback_textview"
            app:layout_constraintEnd_toEndOf="@id/feedback_textview"
            app:layout_constraintTop_toTopOf="@id/feedback_textview"
            app:srcCompat="@drawable/outline_feedback_18" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/licenses_textview"
            app:layout_constraintEnd_toEndOf="@id/licenses_textview"
            app:layout_constraintTop_toTopOf="@id/licenses_textview"
            app:srcCompat="@drawable/outline_short_text_18" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/about_textview"
            app:layout_constraintEnd_toEndOf="@id/about_textview"
            app:layout_constraintTop_toTopOf="@id/about_textview"
            app:srcCompat="@drawable/outline_info_18" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>